[gd_scene load_steps=9 format=3 uid="uid://d3kgab34ogtcg"]

[ext_resource type="Texture2D" uid="uid://dyvuy0gmmb6wl" path="res://assets/title.png" id="1_ao8sa"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ps7t1"]
[ext_resource type="Texture2D" uid="uid://cudi0vtxrsljl" path="res://assets/play_button.png" id="2_oo8kl"]
[ext_resource type="Texture2D" uid="uid://blyeucsic8t52" path="res://assets/play_button_pressed.png" id="3_f0n6m"]
[ext_resource type="Texture2D" uid="uid://bq1s0dc7qgd4e" path="res://assets/play_button_hover.png" id="5_d0qes"]
[ext_resource type="Texture2D" uid="uid://c3igjs4qttd07" path="res://assets/salon_background.jpg" id="5_ymg6t"]
[ext_resource type="Script" path="res://scripts/playbutton.gd" id="6_dpqya"]
[ext_resource type="AudioStream" uid="uid://c71oxbctm6ov0" path="res://music/twinkle.mp3" id="8_pe3jq"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_ps7t1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(8, -46)
scale = Vector2(0.625201, 0.625201)
texture = ExtResource("1_ao8sa")

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = -127.0
offset_top = 172.0
offset_right = 128.0
offset_bottom = 266.0
texture_normal = ExtResource("2_oo8kl")
texture_pressed = ExtResource("3_f0n6m")
texture_hover = ExtResource("5_d0qes")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_dpqya")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-0.161209, -0.278332)
scale = Vector2(0.301614, 0.301614)
texture = ExtResource("5_ymg6t")

[node name="TwinkleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pe3jq")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_pressed"]
